--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -335,13 +335,13 @@ This report is a case study of applying encapsulation, composition and distribut
 The author presents Speakur, a real-time social discussion plugin for the mobile and desktop web, as an example of how HTML5 Web Component technologies can enable web designers and programmers to realize engineering principles such as modularity, encapsulation and separation of concerns when composing pages out of many disparate elements sourced from a diverse set of authors.
 
 Web authors can add a Speakur discussion to their page by inserting a simple HTML element at the desired spot to give the page a real-time discussion or feedback system.
-Speakur uses Google's Polymer framework's implementation of the draft Web Components (WC) standard to achieve encapsulation of its internal implementation details from the containing page, which only interact through a well defined interface (API).
+Speakur uses the Polymer framework's implementation of the draft Web Components (WC) standard to achieve encapsulation of its internal implementation details from the containing page and present a simplified, well defined interface (API).
 
-Web Components are a proposed HTML5 standard for writing custom HTML tags that take advantage of new browser technologies like Shadow DOM, CSS Flexbox and data-bound templates.
-This report will review these new Web Component technologies and provide a case study of structuring a real-world WC applet that is embedded in a larger page or app.
+Web Components are a proposed HTML5-related W3C standard for writing custom HTML tags that take advantage of new browser technologies like Shadow DOM, package importing, CSS Flexboxes and data-bound templates.
+This report reviews Web Component technologies and provides a case study for structuring a real-world WC applet that is embedded in a larger app or system.
 The major research question is whether W3C Web Components provide a viable path towards the encapsulation and composition principles that have largely eluded web engineers thus far. 
 In other words, \textit{are components really the future of the web}? 
-Subsidiary questions include assessing the maturity and suitability of current Web Components technologies for widespread deployment and how to efficiently synchronize component state across a distributed network.
+Subsidiary topics include assessing the maturity and suitability of current Web Components technologies for widespread deployment and how to efficiently synchronize component state across a distributed network.
 
 
 \tableofcontents   % Table of Contents will be automatically
